:sparkles: feat: add método findById para buscar um game